@startuml

title __CREATEPOST's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.post {
      namespace createPost {
        class com.architectica.socialcomponents.main.post.createPost.CreatePostActivity {
            {static} + CREATE_NEW_POST_REQUEST : int
            + createPresenter()
            + onCreateOptionsMenu()
            + onOptionsItemSelected()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.post {
      namespace createPost {
        class com.architectica.socialcomponents.main.post.createPost.CreatePostPresenter {
            + CreatePostPresenter()
            # getSaveFailMessage()
            # isImageRequired()
            # savePost()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.post {
      namespace createPost {
        interface com.architectica.socialcomponents.main.post.createPost.CreatePostView {
        }
      }
    }
  }
  

  com.architectica.socialcomponents.main.post.createPost.CreatePostActivity .up.|> com.architectica.socialcomponents.main.post.createPost.CreatePostView
  com.architectica.socialcomponents.main.post.createPost.CreatePostActivity -up-|> com.architectica.socialcomponents.main.post.BaseCreatePostActivity
  com.architectica.socialcomponents.main.post.createPost.CreatePostPresenter -up-|> com.architectica.socialcomponents.main.post.BaseCreatePostPresenter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
